--- a/.github/workflows/main_webdeploy1.yml
+++ b/.github/workflows/main_webdeploy1.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - webdeploy1
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -24,6 +21,7 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+        working-directory: backend   # 👈 run inside backend folder
         run: |
           npm install
           npm run build --if-present
@@ -33,14 +31,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: backend   # 👈 upload only backend folder
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -62,4 +60,3 @@ jobs:
           app-name: 'webdeploy1'
           slot-name: 'Production'
           package: .
-          
