--- a/.github/workflows/main_webdeploy1.yml
+++ b/.github/workflows/main_webdeploy1.yml
@@ -21,8 +21,8 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
-        working-directory: backend   # 👈 run inside backend folder
-        run: |
+        working-directory: frontend   # 👈 run inside backend folder
+        run: 
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: backend   # 👈 upload only backend folder
+          path: frontend   # 👈 upload only backend folder
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,3 +60,4 @@ jobs:
           app-name: 'webdeploy1'
           slot-name: 'Production'
           package: .
+
